ChangeLog
---------

**** CCI-1.2-xxxx09.tar.gz ****

- added functions for value origin (is_default_value, is_initial_value, is_invalid_value, set_invalid_value to base param
- added functions set/get_documentation for meta data to base param
- cci_value parameter value representation
- added real number to basic data types
- cci_base_param are objects that can be instantiated.
- renamed cci_param_base to cci_base_param, because it will change from a base class to a param object
- added return type to callbacks (e.g. to support value rejection on pre write callback)
- Changed callback type from function pointer to boost::function.


**** CCI-1.1-280509.tar.gz ****

- Added callback type (reason) to callback function signature
- Error codes as return value instead of bool
- Made basic parameter types JSON independent (just renaming)
  to avoid confusion (JSON not necessary here, only needed for 
  (de)serialize).
- Added notes.txt file.
- Portability: changed long long to sc_dt::uint64


**** CCI-1.0-180509.tar.gz ****

- initial release